# Course_Registration_System

./: Courses.txt  README.md  pom.xml
Client/: CMakeLists.txt  Makefile
Client/include/: ConnectionHandler.h  Reader.h  Writer.h
Client/src/: BGRSClient.cpp  ConnectionHandler.cpp  Reader.cpp  Writer.cpp
src/main/java/bgu/spl/net/: Database.java
src/main/java/bgu/spl/net/impl/BGRS/: Admin.java  BGRSMessageEncoderDecoder.java  BGRSProtocol.java  Course.java  Database.java  Message.java  Student.java
src/main/java/bgu/spl/net/impl/BGRSServer/: Admin.java  BGRSMessageEncoderDecoder.java  BGRSProtocol.java  Course.java  Database.java  Message.java  ReactorMain.java  Student.java  TCPMain.java  TPCMain.java
src/main/java/bgu/spl/net/impl/BGRSServer/Tester/: Callback.java  Client.java  ClientHandler.java  CommandProcessor.java  GeneralTests.java  LoginPacket.java  MyTests.java  NoParamPacket.java  OneFieldPacket.java  Packet.java  TcpClient.java  TesterClient.java  TesterMain.java  Tests.java  TestsMain.java
src/main/java/bgu/spl/net/srv/: BaseServer.java  Server.java
src/test/java/bgu/spl/net/impl/BGRS/: BGRSMessageEncoderDecoderTest.java  DatabaseTest.java
src/test/java/bgu/spl/net/impl/BGRSServer/: BGRSMessageEncoderDecoderTest.java  DatabaseTest.java
